--- a/index.html
+++ b/index.html
@@ -1,23 +1,44 @@
 <!doctype html>
 <html>
-     <head>
-           <meta charset="utf-8">
-           <title>Аниме круто</title>
-     </head>
-     <body>
-          <center>
-           <h1>Атра круто</h1>
-           <h3>очень круто!<h3>
-           <img width="50%" src="fenek.jpg" alt="Атра почему ты ненавидишь фенеков?">
-           <br>
-           <a href="https://ru.wikipedia.org/wiki/%D0%A4%D0%B5%D0%BD">Фен в википедии</a>
-           <br>
-           <a href="https://jnregretter1en.github.io/88/">Я такая смешная</a>
-          </center>
-         <ul>
-         <li>Рас рас рас</li>
-         <li><b>это</b></li>
-         <li><i>хардбасс.</i></li>
-         </ul>
-     </body>
+<head>
+    <meta charset="utf-8">
+    <title>Простите, я не умею</title>
+    <link href="style.css" rel="stylesheet">
+    </head>
+<body>
+                 <center>
+    <h1>Друзья говорят, что я смешная</h1>
+    <img alt="Возможно, я опять сделала что-то не так" width="40%" src="garbage.jpg">    
+    <h5><i>Я так не думаю.</i></h5> 
+                 </center>
+    <table>
+    	<tr>
+    		<th>Вопрос</th><th>Ответ</th>
+    	</tr>
+    <p><tr><td><b>Имя:</b></td><td> Лаврова Рина Вадимовна</td></tr>
+    	<br>
+    <tr><td><b>Место учебы:</b></td><td> <s>удивительно, но</s> Высшая Школа Экономики, ФГН, оп "Филология"</td></tr>
+        <br>
+    <tr><td><b>Научные интересы:</b></td><td> это слишком сложные для меня слова, но мне не нравится Хармс, можно считать за научный (не)интерес?</td></tr>
+        <br>
+    <tr><td><b>О себе:</b></td><td> мне исполняется 21 через неделю, и я без понятия, что делать со своей жизнью, меня пугает курсовая работа, а ночью я не могу заснуть без снотворного. Однажды ночью я заказала наггетсы в 2 часа ночи, но мне их не привезли, и я все еще вспоминаю об этом инциденте с ужасом. Так и не нашла смелости пожаловаться на доставку, поэтому жалуюсь всем остальным. Пожалуйста, поставьте 10.</td></tr>
+             </p>
+</table>
+<center><h2><i>1. Как современные технологии могут помочь филологу?</i></h2>
+	<img alt="Возможно, я ОПЯТЬ сделала что-то не так" width="20%" src="krasivo.jpg"> </center>
+	<center>
+Я на самом деле понятия не имею. Когда пришла сюда учиться, не думала, что буду заниматься еще и, ну, <i>вот этим</i>. Однако не считаю, что это лишняя информация. Возможно, пригодится для структурирования литературы, может, для языков. В принципе, может и с филологией будет не связано, а больше с тривиальными вещами. На паре нам предлагали так подрабатывать. Сомневаюсь, что я набью руку настолько хорошо, чтоб с современных технологий деньги зарабатывать, но хотя бы будет не стыдно. Что-то в этом роде.
+Приложить билет к сенсору в метро – это ведь тоже современная технология в каком-то смысле.
+</center>
+<center><h2><i>2. Анализ сайта <a href="http://gramota.ru/">gramota.ru</i></a></h2>
+<img alt="Возможно, я ТРЕТИЙ РАЗ сделала что-то не так" width="50%" src="screen.jpg"> </center></center>
+	<b>Первое:</b> по тепловой карте взгляд падает в левую сторону в первую очередь, центр менее интересен пользователю, левая сторона сайта обычно остается без внимания совсем. С левой стороны на сайте расположена краткая сводка новостей мелким шрифтом и все, у меня первое впечатление было словно сайт пустой.
+    <br>
+    <b>Второе:</b> желтый с зеленым не очень сочетается, но это чисто мое мнение, я вообще-то не очень хороший дизайнер.
+    <br>
+    <b>Третье:</b> возможно, я бы сделала текст больше и каких-нибудь картинок накидала, а то суховато, и так тоска в жизни...
+    <br>
+    <b>Четвертое:</b> вообще-то, этот сайт все еще лучше, чем то что я делаю сейчас.
+    <br>
+    </body>
 </html>
